# fastApiProject2

./: .gitignore  pyproject.toml
